--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <div class="hero-buttons">
     <a href="#projects" class="btn">View Projects</a>
-    <a href="assets/resume.pdf" target="_blank" class="btn outline">Resume</a>
+    <a href="resume.pdf" target="_blank" class="btn outline">Resume</a>
   </div>
 </section>
 
@@ -95,7 +95,7 @@
   <h2>Projects</h2>
 
   <div class="card project-card">
-  <img src="assets/stock.png" alt="Stock Price Prediction" class="project-img" />
+  <img src="stock.png" alt="Stock Price Prediction" class="project-img" />
 
   <h3>Stock Price Prediction Web Application</h3>
 
@@ -120,7 +120,7 @@
     
 
     <div class="card project-card">
-  <img src="assets/maze.png" alt="Maze Solver Visualization" class="project-img" />
+  <img src="maze.png" alt="Maze Solver Visualization" class="project-img" />
 
   <h3>Interactive Maze Solver & Visualizer</h3>
 
@@ -366,3 +366,4 @@
 
   </div>
 </div>
+
